bk_ida/gccida/c1/eadd
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eadd/src/real.c:3270:9: error: use of undeclared identifier 'aE'
mtherr( aE, 7); 
        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eadd/src/obj/real.o] Error 1
